--- a/app/views/workouts/new.html.erb
+++ b/app/views/workouts/new.html.erb
@@ -2,50 +2,50 @@
 
 <%= form_tag("/workouts", method: "post") do %>
 <div>
-<%= field_tag(:first_name) %>
-<%= text_field_tag(:first_name) %>
+  <h3><%= label_tag(:first_name) %>
+  <h3><%= text_field_tag(:first_name) %>
 </div>
 
 <div>
-<%= field_tag(:last_name) %>
-<%= text_field_tag(:last_name) %>
+  <h3><%= label_tag(:last_name) %></h3>
+  <h3><%= text_field_tag(:last_name) %></h3>
 </div>
 
 <div>
-<%= field_tag(:gender) %>
-<%= text_field_tag(:gender) %>
+  <h3><%= label_tag(:gender) %></h3>
+  <h3><%= text_field_tag(:gender) %></h3>
 </div>
 
 <div>
-<%= field_tag(:partner_gender) %>
-<%= text_field_tag(:partner_gender) %>
+  <h3><%= label_tag(:partner_gender) %></h3>
+  <h3><%= text_field_tag(:partner_gender) %></h3>
 </div>
 <div>
-<%= field_tag(:image) %>
-<%= text_field_tag(:image) %>
+  <h3><%= label_tag(:image) %></h3>
+  <h3><%= text_field_tag(:image) %></h3>
 </div>
 <div>
-<%= field_tag(:age) %>
-<%= text_field_tag(:age) %>
+  <h3><%= label_tag(:age) %></h3>
+  <h3><%= text_field_tag(:age) %></h3>
 </div>
 <div>
-<%= field_tag(:relationship_status) %>
-<%= text_field_tag(:relationship_status) %>
+  <h3><%= label_tag(:relationship_status) %></h3>
+  <h3><%= text_field_tag(:relationship_status) %></h3>
 </div>
 <div>
-<%= field_tag(:user_exp) %>
-<%= text_field_tag(:user_exp) %>
+  <h3><%= label_tag(:user_exp) %></h3>
+  <h3><%= text_field_tag(:user_exp) %></h3>
 </div>
 <div>
-<%= field_tag(:gym) %>
-<%= text_field_tag(:gym) %>
+  <h3><%= label_tag(:gym) %></h3>
+  <h3><%= text_field_tag(:gym) %></h3>
 </div>
 <div>
-<%= field_tag(:bio) %>
-<%= text_field_tag(:bio) %>
+  <h3><%= label_tag(:bio) %></h3>
+  <h3><%= text_field_tag(:bio) %></h3>
 </div>
 <div>
-<%= submit_tag("Submit") %>
+  <h3><%= submit_tag("Submit") %></h3>
 </div>
 
 <% end %>
