--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -1,1 +1,4 @@
 <h3>Here is the index page</h3>
+
+<%= link_to "Logout", destroy_user_session_path, method: 'delete' %>
+<%= link_to "Edit", "/users/edit" %>
