--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,7 @@
-<center><h2>SIGN UP</h2>
+<br /><br /><br /><br />
+
+<div class="border-form-div">
+<h2>SIGN UP</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -8,8 +11,6 @@
     <%= f.text_field :user_name, autofocus: true %>
   </div>
 
-
-
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
@@ -17,9 +18,9 @@
 
   <div class="field">
     <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
@@ -28,14 +29,9 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="field">
-    <%= f.label :zip_code %><br />
-    <%= f.text_field :zip_code, autofocus: true %>
-  </div>
-
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up",:class=>'btn btn-primary' %>
   </div>
 <% end %>
 <%= render "devise/shared/links" %>
-</center>
+</div>
