--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,11 @@
 
   							<!-- name-and-slogan -->
   							<div class="logo-section smooth-scroll">
-  								<div class="brand"><a href="/welcome"><b>SPOT</b>ME</a></div>
+                  <% if user_signed_in? %>
+                    <div class="brand"><a href="/matches"><b>SPOT</b>ME</a></div>
+                  <% else  %>
+  								  <div class="brand"><a href="/welcome"><b>SPOT</b>ME</a></div>
+                  <% end %>
   							</div>
 
   						</div>
@@ -59,9 +63,16 @@
   										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
   											<ul class="nav navbar-nav navbar-right">
   												<li class="active"><a href="/matches">Home</a></li>
-  												<li><a href="#service">About</a></li>
-  												<li><a href="/users/sign_in">Login</a></li>
-                          <li><a href="">Messages</a></li>
+
+
+
+                          <% if user_signed_in? %>
+
+                            <li><a href="">Messages</a></li>
+                          <% else %>
+                            <li><a href="/users/sign_in">Login</a></li>
+                            <li><a href="#service">About</a></li>
+                          <% end %>
                           <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="false" aria-expanded="false"> Profile <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -71,7 +82,7 @@
                               <li><%= link_to "Logout", destroy_user_session_path, :method => "delete" %></li>
                                 <% else  %>
                               <li><a href="/users/sign_in">Login Account</a></li>
-                                <% end %>
+                                <% end  %>
                               <li role="separator" class="divider"></li>
                               <li><a href="#">Separated link</a></li>
                             </ul>
