--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -2,15 +2,48 @@
 
 <div class="page-wrapper">
 
+  <% @user ||= current_user %>
+  <div class="stats">
+    <a href="<%= following_user_path(@user) %>">
+      <strong id="following" class="stat">
+        <%= @user.following.count %>
+      </strong>
+      following
+    </a>
+    <a href="<%= followers_user_path(@user) %>">
+      <strong id="followers" class="stat">
+        <%= @user.followers.count %>
+      </strong>
+      followers
+    </a>
+  </div>
 
-<% @users.each do |user| %>
-<div class="col-md-4">
-<div class= "index_format">
-  <h3>User_name: <%= link_to user.user_name, "/matches/#{user.id}" %></h3>
-  <h4>Age: <%= user.age %></h4>
-</div>
-</div>
-<% end %>
-<%= link_to "Logout", destroy_user_session_path, method: 'delete' %>
-<%= link_to "Edit Profile", "/users/edit" %>
+    <div class="row">
+        <div class="col-lg-12">
+            <center><h1 class="page-header">Your Matches
+            </h1></center>
+            <p>Testing out the matching</p>
+        </div>
+    </div>
+
+
+    <!-- <% @users.each do |user| %>
+    <div class="col-md-4">
+    <div class= "index_format">
+      <h3>User_name: <%= link_to user.user_name, "/matches/#{user.id}" %></h3>
+      <h4>Age: <%= user.age %></h4>
+    </div>
+    </div>
+    <% end %>
+    </div> -->
+
+    <!-- <div class="clearfix"> -->
+    <% @users.find_each do |user| %>
+        <div class="col-lg-4 col-xs-6 text-center">
+            <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+            <h3>User_name: <%= link_to user.user_name, "/matches/#{user.id}" %></h3>
+            <h4>Age: <%= user.age %></h4>
+        </div>
+    <% end %>
+    <!-- </div> -->
 </div>
