Adding follower and followee

--- a/app/assets/stylesheets/form.css.scss
+++ b/app/assets/stylesheets/form.css.scss
@@ -6,8 +6,10 @@
 /* User sign in and sign forms. */
 .border-form-div {
   max-width: 600px;
+  height: 500px;
   padding: 19px 29px 29px;
   margin: 0 auto 20px;
+  margin-top:100px; 
   background-color: #fff;
   border: 1px solid #e5e5e5;
   -webkit-border-radius: 5px;
