--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,7 +117,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <p class="text-center">Copyright © 2016 Template by <a target="_blank" href="http://webthemez.com">webthemez.com</a></p>
+              <p class="text-center">Copyright 2016 <a target="_blank" href="http://webthemez.com">Spot-mee.com</a></p>
             </div>
           </div>
         </div>
