--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -2,30 +2,17 @@
 
 <div class="page-wrapper">
 
-  <% @user ||= current_user %>
-  <div class="stats">
-    <a href="<%= following_user_path(@user) %>">
-      <strong id="following" class="stat">
-        <%= @user.following.count %>
-      </strong>
-      following
-    </a>
-    <a href="<%= followers_user_path(@user) %>">
-      <strong id="followers" class="stat">
-        <%= @user.followers.count %>
-      </strong>
-      followers
-    </a>
-  </div>
 
     <div class="row">
         <div class="col-lg-12">
             <center><h1 class="page-header">Your Matches
             </h1></center>
-            <p>Testing out the matching</p>
         </div>
     </div>
 
+    <section class="stats">
+      <%= render 'shared/stats'  %>
+    </section>
 
     <!-- <% @users.each do |user| %>
     <div class="col-md-4">
@@ -41,7 +28,7 @@
     <% @users.find_each do |user| %>
         <div class="col-lg-4 col-xs-6 text-center">
             <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-            <h3>User_name: <%= link_to user.user_name, "/matches/#{user.id}" %></h3>
+            <h3>User_name: <%= link_to user.user_name, "/users/#{user.id}" %></h3>
             <h4>Age: <%= user.age %></h4>
         </div>
     <% end %>
