--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,19 @@
-<br /> <br /> <br /> <br />  <br /> <br />
+
 <div class="border-form-div">
 
   <section class="stats">
     <%= render 'shared/stats' %>
   </section>
 
-  <%= render 'follow_form' if user_signed_in? %>
+  <% if current_user %>
+    <div id="follow_form">
+    <% if current_user.following?(@user) %>
+      <%= render partial: 'unfollow' %>
+    <% else %>
+      <%= render partial: 'follow' %>
+    <% end %>
+    </div>
+  <% end %>
 
 <h2><%= @user.first_name %></h2>
 <h4>User name: <%= @user.user_name %></h4>
