--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -2,7 +2,7 @@
   <h1>Following View</h1>
 <% @user.following.each do |user_id| %>
   <ul>
-    <li><%= user_id.first_name %></li>
+    <li><%= user_id.user_name %></li>
   </ul>
 <% end %>
 </div>
