--- a/app/views/workouts/welcome.html.erb
+++ b/app/views/workouts/welcome.html.erb
@@ -9,9 +9,9 @@
           <div style="margin-top: 0px; opacity: 1;" data-animation-effect="fadeIn">
               <h3 class="padding-top30">Find Your Workout Partner.</h3>
               <div class="padding-top60 contact-form">
-                <button class="btn cta-button"  href= new_registration_path(resource_name) >Sign Up</button>
+                <button class="btn cta-button" href='/users/sign_up' >Sign Up</button>
               </div>
-              <a id="" href="#services"><i class="fa fa-angle-down"></i></a>
+              <!-- <a id="" href="#services"><i class="fa fa-angle-down"></i></a> -->
       </div>
     </div>
   </div>
