--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,9 @@
  *= require_tree .
  *= require_self
  */
+
+
+ body {
+   padding-top: 80px;
+   background-image:url("dark-background.jpg");
+ }
