--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -2,7 +2,7 @@
 <h3>Followers</h3>
 <% @user.followers.each do |user_id| %>
   <ul>
-    <li><%= user_id.first_name %></li>
+    <li><%= user_id.user_name %></li>
   </ul>
 <% end %>
 </div>
