--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,7 +1,4 @@
 
-<div class="page-wrapper">
-
-
     <div class="row">
         <div class="col-lg-12">
             <center><h1 class="page-header">Your Matches
@@ -9,9 +6,9 @@
         </div>
     </div>
 
-    <section class="stats">
+    <!-- <section class="stats">
       <%= render 'shared/stats' %>
-    </section>
+    </section> -->
 
     <!-- <% @users.each do |user| %>
     <div class="col-md-4">
