Update Capstone Project

--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -2,7 +2,7 @@
 <div class="row col-md-8 col-md-offset-2" ng-controller="messagesCtrl" ng-init="getChatroom(<%= params[:id] %>)">
 
    <div class="panel panel-primary">
-     <div class="panel-heading"><h2><center><%= @user %></center></h2></div>
+     <!-- <div class="panel-heading"><h2><center><%= @user %></center></h2></div> -->
     <div class="panel-body fixed-panel" id="messages" >
        <h4 ng-repeat="message in chatroom.messages">{{message.email}}: <span style="font-weight: 200;">{{ message.content }}</span></h4>
      </div>
