--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,11 @@
     <%= f.text_field :user_name, autofocus: true %>
   </div>
 
+  <div class = "field">
+    <%= f.label :age %><br />
+    <%= f.text_field :age %>
+  </div>
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
