--- a/app/views/workouts/welcome.html.erb
+++ b/app/views/workouts/welcome.html.erb
@@ -10,6 +10,7 @@
               <h3 class="padding-top30">Find Your Workout Partner.</h3>
               <div class="padding-top60 contact-form">
                 <button class="btn cta-button" href='/users/sign_up' >Sign Up</button>
+                <a href="/users/sign_up" class="btn cta-button">Sign up</a>
               </div>
               <!-- <a id="" href="#services"><i class="fa fa-angle-down"></i></a> -->
       </div>
