--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,3 +1,11 @@
-// .clearfix {
-//   overflow: auto;
-// }
+.avatar {
+  border-radius: 50px;
+  width: 100px;
+  height: 100px;
+  border: 3px;
+}
+
+.filterBar {
+  border: 1px;
+  margin: 10px
+}
