--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
 <div class="border-form-div">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => { method: :put, :multipart => true }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
@@ -55,18 +55,22 @@
   <div class = "field">
     <%= f.label :gender %><br />
     <%= f.select :gender, ['male', 'female']%>
-
-  </div>
+  </div><br/>
 
   <div class = "field">
     <%= f.label :Partner_preference %><br />
       <%= f.select :partner_gender, ['male', 'female']%>
-  </div>
+  </div><br/>
 
   <div class = "field">
-    <%= f.label :image %><br />
-    <%= f.text_field :image %>
-  </div>
+    <%= f.label :photo do %>
+    <%= f.label :image %>
+    <%= f.file_field :photo %>
+    <% end %>
+    <% if current_user.photo.url.present? %>
+    <%= image_tag(current_user.photo.url, height: "100", width: "100") %>
+    <% end %>
+  </div><br/>
 
   <div class = "field">
     <%= f.label :age %><br />
@@ -81,7 +85,7 @@
   <div class = "field">
     <%= f.label :What_is_your_experience? %><br />
     <%= f.select :user_exp, ['None','Beginner', 'Intermediate', 'Expert'] %>
-  </div>
+  </div><br />
 
   <div class = "field">
     <%= f.label :gym %><br />
@@ -91,9 +95,9 @@
   <div class = "field">
     <%= f.fields_for :user_activities do |o| %>
     <%= o.label :activities, "Select your activities" %><br />
-    <%= o.select :activities, options_for_select(Activity.all.map{|activity| [activity.name, activity.id]}, current_user.activities.map{|activity| [activity.name]}), {}, {:multiple => true, class: 'js-example-basic-multiple form-control'} %>
+    <%= o.select :activities, options_for_select(Activity.all.map{|activity| [activity.name, activity.id]}, current_user.activities.map{|a| [a.name, a.id]}.flatten), {}, {:multiple => true, class: 'js-example-basic-multiple form-control'} %>
     <% end %>
-  </div>
+  </div><br/>
 
   <script type="text/javascript">
     $(".js-example-basic-single").select2({
@@ -127,14 +131,14 @@
   </div>
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :current_password %> <i>(Confirm changes by putting current password)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
 
   <div class="actions">
      <%= f.submit "Update",:class=>'btn btn-primary' %>
   </div>
-  <% end %>
+<% end %>
 
 <h3>Cancel my account</h3>
 
