--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,35 +1,61 @@
+<% if user_signed_in? %>
+  <div class= "centered">
 
-    <div class="row">
-        <div class="col-lg-12">
-            <center><h1 class="page-header">Your Matches
-            </h1></center>
-        </div>
-    </div>
+      <div class= "avatar">
+        <%= image_tag current_user.photo_url unless current_user.photo.blank? %>
+      </div>
+        <section class="stats">
+          <h2><%= current_user.first_name %> <%= current_user.last_name  %></h2>
+          <h4><%= link_to "View my Profile", "/users/#{current_user.id}" %></h4>
+          <br/><%= render 'shared/stats' %>
+        </section>
+  </div>
+<% end %>
+
+
+  <div class="row">
+      <div class="col-lg-12">
+          <center><h1 class="page-header" style="color:white">Recommended Matches
+          </h1></center>
+      </div>
+  </div>
+
 
     <div class= "filterBar">
-  <%= form_tag("/matches", method: "get") do %>
-    <%= check_box_tag(:gender) %>
-    <%= label_tag(:gender, "male") %>
-
-    <%= check_box_tag(:gender) %>
-    <%= label_tag(:gender, "female") %>
-
-    <%= label_tag(:age, "Age") %>
-    <%= select_tag(:age, options_for_select([["18..26", 26], ["27..30", 31], ["31..40", 41], ["41..50", 51], ["51..60",61]])) %>
-
-    <%= label_tag(:user_exp, "User Experience") %>
-    <%= select_tag(:user_exp, options_for_select(["None","Beginner", "Intermediate", "Expert"])) %>
-
-    <%= label_tag(:activities, "Select your activities") %>
-    <%= select_tag :activities, options_for_select(Activity.all.map{|activity| [activity.name, activity.id]}) %>
-    <%= submit_tag("Search") %>
+      <%= form_tag("/search", method: "get") do %>
+    <div class= "bar">
+      <%= check_box_tag(:male) %>
+      <%= label_tag(:male, "Male") %>
+    </div>
+    <div class= "bar">
+      <%= check_box_tag(:female) %>
+      <%= label_tag(:female, "Female") %>
+    </div>
+    <div class= "bar">
+      <%= label_tag(:age, "Age") %>
+      <%= select_tag(:age, options_for_select([["18-26", 18..26], ["27-30", 27..31], ["31-40", 31..41], ["41-50", 41..51], ["51-60", 51..61]])) %>
+    </div>
+    <div class= "bar">
+      <%= label_tag(:user_exp, "User Experience") %>
+      <%= select_tag(:user_exp, options_for_select(["None","Beginner", "Intermediate", "Expert"])) %>
+    </div>
+    <div class= "bar">
+      <%= label_tag(:activities, "Activities") %><br/>
+      <%= select_tag :activities, options_for_select(Activity.all.map{|activity| [activity.name, activity.id]}, current_user.activities.map{|a| [a.name, a.id]}.flatten), {:multiple => true, class: 'js-example-basic-multiple form control'} %><br/>
+      <%= submit_tag("Search", :class => "btn btn-default" ) %>
+    </div>
   <% end %>
   </div>
+
+  <script type="text/javascript">
+   $(".js-example-basic-multiple").select2({
+   });
+ </script>
 
     <!-- <div class="clearfix"> -->
     <% @users.find_each do |user| %>
         <div class="col-lg-4 col-xs-6 text-center">
-            <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
+            <img class="img-circle img-responsive img-center" src="image_tag @user.photo_url" alt="">
             <h3>User_name: <%= link_to user.user_name, "/users/#{user.id}" %></h3>
             <h4>Age: <%= user.age %></h4>
         </div>
