--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -1,8 +1,8 @@
 <div class=border-favorite-form>
-  <h1>Following View</h1>
-<% @user.following.each do |user_id| %>
+  <center><h1>Following View</h1></center>
+<% @user.following.each do |person| %>
   <ul>
-    <li><%= user_id.user_name %></li>
+    <li><h4><%= link_to "#{person.user_name}", "/users/person.id" %></h4></li>
   </ul>
 <% end %>
 </div>
