--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -3,9 +3,52 @@
   width: 100px;
   height: 100px;
   border: 3px;
+  display: block;
+}
+
+.display_avatar {
+  width: 200px;
+  height: 200px;
+  border: 2px solid black;
+  display: block;
+  margin: auto;
+}
+
+.avatar-show {
+  width: 30%;
+  height: 30%;
+  display: block;
+  margin: auto;
+  border: 1px solid black;
 }
 
 .filterBar {
-  border: 1px;
-  margin: 10px
+  border: 5px solid black;
+  border-width: 5px;
+  padding: 10px;
+  margin: 1px;
+  margin-left: 86%;
+  display: block;
+  float: left;
+}
+
+.centered {
+  margin-left: 45%;
+}
+
+.user_border {
+  max-width: 600px;
+  height: auto;
+  padding: 19px 29px 29px;
+  margin: 0 auto 20px;
+  margin-top: 100px;
+  background-color: #E2DAD9;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+  -webkit-box-shadow: 0 0 10px 10px;
+     -moz-box-shadow: 0 0 10px 10px;
+          box-shadow: 0 0 10px 10px;
+
 }
