--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,15 +1,14 @@
 <% if user_signed_in? %>
-  <div class= "centered">
-
+    <div class= "centered">
       <div class= "avatar">
         <%= image_tag current_user.photo_url unless current_user.photo.blank? %>
-      </div>
+      </div><br />
         <section class="stats">
           <h2><%= current_user.first_name %> <%= current_user.last_name  %></h2>
           <h4><%= link_to "View my Profile", "/users/#{current_user.id}" %></h4>
           <br/><%= render 'shared/stats' %>
         </section>
-  </div>
+    </div>
 <% end %>
 
 
@@ -36,12 +35,12 @@
       <%= select_tag(:age, options_for_select([["18-26", 18..26], ["27-30", 27..31], ["31-40", 31..41], ["41-50", 41..51], ["51-60", 51..61]])) %>
     </div>
     <div class= "bar">
-      <%= label_tag(:user_exp, "User Experience") %>
+      <%= label_tag(:user_exp, "User Experience") %><br />
       <%= select_tag(:user_exp, options_for_select(["None","Beginner", "Intermediate", "Expert"])) %>
     </div>
-    <div class= "bar">
+    <div class= "activities">
       <%= label_tag(:activities, "Activities") %><br/>
-      <%= select_tag :activities, options_for_select(Activity.all.map{|activity| [activity.name, activity.id]}, current_user.activities.map{|a| [a.name, a.id]}.flatten), {:multiple => true, class: 'js-example-basic-multiple form control'} %><br/>
+      <h4 style="color:black"><%= select_tag :activities, options_for_select(Activity.all.map{|activity| [activity.name, activity.id]}, current_user.activities.map{|a| [a.name, a.id]}.flatten), {:multiple => true, class: 'js-example-basic-multiple form control'} %><h4><br/>
       <%= submit_tag("Search", :class => "btn btn-default" ) %>
     </div>
   <% end %>
@@ -55,10 +54,13 @@
     <!-- <div class="clearfix"> -->
     <% @users.find_each do |user| %>
         <div class="col-lg-4 col-xs-6 text-center">
-            <img class="img-circle img-responsive img-center" src="image_tag @user.photo_url" alt="">
-            <h3>User_name: <%= link_to user.user_name, "/users/#{user.id}" %></h3>
+          <div class="user_border">
+          <div class="display_avatar">
+            <%= image_tag user.photo_url unless user.photo.blank? %>
+          </div>
+            <h3>Username: <%= link_to user.user_name, "/users/#{user.id}" %></h3>
             <h4>Age: <%= user.age %></h4>
+          </div>
         </div>
     <% end %>
     <!-- </div> -->
-</div>
