--- a/app/views/workouts/welcome.html.erb
+++ b/app/views/workouts/welcome.html.erb
@@ -4,16 +4,14 @@
     <div class="banner-image">
       <%= image_tag('banner.jpg') %>
     </div>
-    <div class="banner-caption">
 
+    <div class="banner-caption">
           <div style="margin-top: 0px; opacity: 1;" data-animation-effect="fadeIn">
               <h3 class="padding-top30">Find Your Workout Partner.</h3>
               <div class="padding-top60 contact-form">
-                <button class="btn cta-button" href='/users/sign_up' >Sign Up</button>
-                <a href="/users/sign_up" class="btn cta-button">Sign up</a>
-              </div>
+                <center><a class="btn btn-danger" href="/users/sign_up" role="button">Sign Up</a></center>
               <!-- <a id="" href="#services"><i class="fa fa-angle-down"></i></a> -->
-      </div>
+              </div>
     </div>
   </div>
 
