--- a/app/views/chatrooms/new.html.erb
+++ b/app/views/chatrooms/new.html.erb
@@ -15,14 +15,16 @@
 
     <h1 style="color: white"><center>Message a Buddy</center>
 
+    <div class="border-favorite-form">
     <ul class="list-unstyled">
         <% @users.each do |user| %>
             <% if current_user.chatroom(user.id) %>
                 <li><h3><%= link_to user.user_name, "/chatrooms/#{current_user.chatroom(user.id).id}" %></h3></li>
-                 <a class="btn btn-primary" href="/users/#{user.id}" role="button">View Profile</a>
+                 <!-- <a class="btn btn-primary" href="/users/#{user.id}" role="button">View Profile</a> -->
             <% else %>
                 <li><h3><%= link_to user.user_name, "/chatrooms?user_id=#{user.id}", method: 'post' %></h3></li>
             <% end %>
         <% end %>
     </ul>
+    </div>
 </div>
