--- a/app/views/workouts/welcome.html.erb
+++ b/app/views/workouts/welcome.html.erb
@@ -9,7 +9,7 @@
           <div style="margin-top: 0px; opacity: 1;" data-animation-effect="fadeIn">
               <h3 class="padding-top30">Find Your Workout Partner.</h3>
               <div class="padding-top60 contact-form">
-                <center><a class="btn btn-danger" href="/users/sign_up" role="button">Sign Up</a></center>
+                <center><a class="btn btn-danger btn-lg active" href="/users/sign_up" role="button">Sign Up</a></center>
               <!-- <a id="" href="#services"><i class="fa fa-angle-down"></i></a> -->
               </div>
     </div>
