--- a/app/assets/stylesheets/follows.scss
+++ b/app/assets/stylesheets/follows.scss
@@ -31,8 +31,9 @@
 
 .stats {
   overflow: auto;
-  margin-top: 0;
+  margin-top: auto;
   padding: 0;
+  color: white;
   a {
     float: left;
     padding: 0 10px;
