--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,13 +1,16 @@
 .avatar {
-  border-radius: 50px;
-  width: 100px;
+  width: 200px;
   height: 100px;
   border: 3px;
   display: block;
 }
 
+.avatar img{
+  width: 100%;
+}
+
 .display_avatar {
-  width: 200px;
+  width: 180px;
   height: 200px;
   border: 2px solid black;
   display: block;
@@ -23,13 +26,21 @@
 }
 
 .filterBar {
-  border: 5px solid black;
-  border-width: 5px;
-  padding: 10px;
-  margin: 1px;
-  margin-left: 86%;
-  display: block;
-  float: left;
+  max-width: 950px;
+  height: auto;
+  padding: 19px 29px 29px;
+  margin: 0 auto 20px;
+  margin-top: 40px;
+  // margin-left: 86%;
+  // display: inline;
+  background-color: #E2DAD9;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+  -webkit-box-shadow: 0 0 0px 0px;
+     -moz-box-shadow: 0 0 0px 0px;
+          box-shadow: 0 0 0px 0px;
 }
 
 .centered {
@@ -51,4 +62,9 @@
      -moz-box-shadow: 0 0 10px 10px;
           box-shadow: 0 0 10px 10px;
 
+}
+
+.select_box {
+  width: 300px;
+  height: 300px;
 }
