--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -2,7 +2,7 @@
     <div class= "centered">
       <div class= "avatar">
         <%= image_tag current_user.photo_url unless current_user.photo.blank? %>
-      </div><br />
+      </div><br /><br /><br />
         <section class="stats">
           <h2><%= current_user.first_name %> <%= current_user.last_name  %></h2>
           <h4><%= link_to "View my Profile", "/users/#{current_user.id}" %></h4>
@@ -20,47 +20,42 @@
   </div>
 
 
-    <div class= "filterBar">
-      <%= form_tag("/search", method: "get") do %>
-    <div class= "bar">
-      <%= check_box_tag(:male) %>
-      <%= label_tag(:male, "Male") %>
-    </div>
-    <div class= "bar">
-      <%= check_box_tag(:female) %>
-      <%= label_tag(:female, "Female") %>
-    </div>
-    <div class= "bar">
-      <%= label_tag(:age, "Age") %>
-      <%= select_tag(:age, options_for_select([["18-26", 18..26], ["27-30", 27..31], ["31-40", 31..41], ["41-50", 41..51], ["51-60", 51..61]])) %>
-    </div>
-    <div class= "bar">
-      <%= label_tag(:user_exp, "User Experience") %><br />
-      <%= select_tag(:user_exp, options_for_select(["None","Beginner", "Intermediate", "Expert"])) %>
-    </div>
-    <div class= "activities">
-      <%= label_tag(:activities, "Activities") %><br/>
-      <h4 style="color:black"><%= select_tag :activities, options_for_select(Activity.all.map{|activity| [activity.name, activity.id]}, current_user.activities.map{|a| [a.name, a.id]}.flatten), {:multiple => true, class: 'js-example-basic-multiple form control'} %><h4><br/>
-      <%= submit_tag("Search", :class => "btn btn-default" ) %>
-    </div>
-  <% end %>
-  </div>
+  <div class= "filterBar" style= "color:black">
+    <%= form_tag("/search", method: "get") do %>
 
-  <script type="text/javascript">
-   $(".js-example-basic-multiple").select2({
-   });
- </script>
+    <%= check_box_tag(:male) %>
+    <%= label_tag(:male, "Male") %>
 
-    <!-- <div class="clearfix"> -->
-    <% @users.find_each do |user| %>
-        <div class="col-lg-4 col-xs-6 text-center">
-          <div class="user_border">
-          <div class="display_avatar">
-            <%= image_tag user.photo_url unless user.photo.blank? %>
-          </div>
-            <h3>Username: <%= link_to user.user_name, "/users/#{user.id}" %></h3>
-            <h4>Age: <%= user.age %></h4>
-          </div>
-        </div>
+    <%= check_box_tag(:female) %>
+    <%= label_tag(:female, "Female") %>
+
+    <%= label_tag(:age, "Age") %>
+    <%= select_tag(:age, options_for_select([["18-26", 18..26], ["27-30", 27..31], ["31-40", 31..41], ["41-50", 41..51], ["51-60", 51..61]])) %>
+
+    <%= label_tag(:user_exp, "User Experience") %>
+    <%= select_tag(:user_exp, options_for_select(["None","Beginner", "Intermediate", "Expert"])) %>
+
+    <%= label_tag(:activities, "Activities") %>
+    <%= select_tag :activities, options_for_select(Activity.all.map{|activity| [activity.name, activity.id]}, current_user.activities.map{|a| [a.name, a.id]}.flatten), {:multiple => true, class: 'js-example-basic-multiple form control select_box'} %>
+
+    <%= submit_tag("Search", :class => "btn btn-default" ) %>
     <% end %>
-    <!-- </div> -->
+</div>
+
+<script type="text/javascript">
+ $(".js-example-basic-multiple").select2({
+ });
+</script>
+
+  <!-- <div class="clearfix"> -->
+  <% @users.find_each do |user| %>
+      <div class="col-lg-4 col-xs-6 text-center">
+        <div class="user_border">
+        <div class="display_avatar">
+          <%= image_tag user.photo_url unless user.photo.blank? %>
+        </div>
+          <h3>Username: <%= link_to user.user_name, "/users/#{user.id}" %></h3>
+          <h4>Age: <%= user.age %></h4>
+        </div>
+      </div>
+  <% end %>
