--- a/app/assets/stylesheets/form.css.scss
+++ b/app/assets/stylesheets/form.css.scss
@@ -10,7 +10,7 @@
   padding: 19px 29px 29px;
   margin: 0 auto 20px;
   margin-top:50px;
-  background-color: #fff;
+  background-color: #E2DAD9;
   border: 1px solid #e5e5e5;
   -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
