--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,32 +1,31 @@
 .avatar {
-  width: 200px;
+  width: 150px;
   height: 100px;
   border: 3px;
   display: block;
 }
 
 .avatar img{
-  width: 100%;
 }
 
 .display_avatar {
-  width: 180px;
+  width: 200px;
   height: 200px;
-  border: 2px solid black;
+  border: 2px;
   display: block;
   margin: auto;
 }
 
 .avatar-show {
-  width: 30%;
+  width: 40%;
   height: 30%;
   display: block;
   margin: auto;
-  border: 1px solid black;
+  border: 1px;
 }
 
 .filterBar {
-  max-width: 950px;
+  max-width: 940px;
   height: auto;
   padding: 19px 29px 29px;
   margin: 0 auto 20px;
