--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -2,7 +2,7 @@
     <div class= "centered">
       <div class= "avatar">
         <%= image_tag current_user.photo_url unless current_user.photo.blank? %>
-      </div><br /><br /><br />
+      </div><br /><br />
         <section class="stats">
           <h2><%= current_user.first_name %> <%= current_user.last_name  %></h2>
           <h4><%= link_to "View my Profile", "/users/#{current_user.id}" %></h4>
@@ -48,11 +48,12 @@
 </script>
 
   <!-- <div class="clearfix"> -->
-  <% @users.find_each do |user| %>
+  <% @users.uniq.find_each do |user| %>
+
       <div class="col-lg-4 col-xs-6 text-center">
         <div class="user_border">
         <div class="display_avatar">
-          <%= image_tag user.photo_url unless user.photo.blank? %>
+          <%= image_tag(user.photo_url, size: "180x50",) unless user.photo.blank? %>
         </div>
           <h3>Username: <%= link_to user.user_name, "/users/#{user.id}" %></h3>
           <h4>Age: <%= user.age %></h4>
