--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -37,5 +37,5 @@
     <%= f.submit "Sign up",:class=>'btn btn-primary' %>
   </div>
 <% end %>
-<%= render "devise/shared/links" %>
+<!-- # <%= render "devise/shared/links" %> -->
 </div>
